src/objects/Management_System_Audit__c.object
<CustomObject>
    <description>Custom object for capturing Audits (for QIPP Application), for Quality Team</description>
    <fields>
        <fullName>Audit_Complete_Date__c</fullName>
        <inlineHelpText>Leave blank upon creating new record; will be updated when all findings are closed from the calendar.</inlineHelpText>
        <label>Audit Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Conducted__c</fullName>
        <label>Audit Conducted</label>
        <picklist>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_Duration__c</fullName>
        <inlineHelpText>External audits only</inlineHelpText>
        <label>Audit Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Executed_Date__c</fullName>
        <inlineHelpText>Leave blank upon creating new record; will be updated when audit has been conducted; select the last day of the audit from the calendar.</inlineHelpText>
        <label>Audit Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Headcount__c</fullName>
        <label>Audit Headcount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Location__c</fullName>
        <inlineHelpText>Enter audit location.</inlineHelpText>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Name_Unique__c</fullName>
        <label>Audit Name - Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Audit_Organization_Manager__c</fullName>
        <inlineHelpText>Fill in the name of the organization manager who will be responsible for implementation of the corrective actions.</inlineHelpText>
        <label>Audit Organization Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Planned_Date__c</fullName>
        <inlineHelpText>Select the date of the planned audit.  If only the month is known, select the last day of the month from the calendar.</inlineHelpText>
        <label>Audit Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Report_Received__c</fullName>
        <label>Audit Report Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Status__c</fullName>
        <label>Audit Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned, not committed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planned, committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <label>Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>ISO14K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO14K&amp;OHS18K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO27K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO22301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO9K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO9K&amp;ISO14K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHS18K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL9K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL9K&amp;ISO14K</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_URL__c</fullName>
        <label>Audit URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Audit_Year__c</fullName>
        <label>Audit Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_organization__c</fullName>
        <label>Audit Organization</label>
        <picklist>
            <picklistValues>
                <fullName>MBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QMS and Audits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_purpose_and_scope__c</fullName>
        <inlineHelpText>Optional, space to add additional information; you can list the details of processes covered, etc.</inlineHelpText>
        <label>Audit Purpose and Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Optional field; could be used to provide additional detail about the audited organization such as the name of the Unit, Business Unit, Business Lines.  This can be used also e.g. to separate Product Lines inside Business Lines (e.g. BSC, RNC, BTS).</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Auditor_Name__c</fullName>
        <label>External Auditor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Audit_Program_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search by the *First Name* (or) *Last Name* - append * at the beginning and at the end - and you will be provided with a list of contacts to choose from.</inlineHelpText>
        <label>Int Audit Program Owner / Ext Audit Host</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Audits (Internal Audit Program Owner)</relationshipLabel>
        <relationshipName>Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_External__c</fullName>
        <label>Internal / External</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Auditor_Email__c</fullName>
        <label>Lead Auditor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search by the *First Name* (or) *Last Name* - append * at the beginning and at the end - and you will be provided with a list of contacts to choose from.</inlineHelpText>
        <label>Lead Auditor</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Audits (Lead Auditor)</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Management_System__c</fullName>
        <label>Management System</label>
        <picklist>
            <picklistValues>
                <fullName>EMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSSMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS + HSSMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS + QMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_Cancellation__c</fullName>
        <inlineHelpText>If audit canceled, please provide the details regarding the justification for cancellation.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revised_Audit_Planned_Date__c</fullName>
        <label>Revised Audit Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <inlineHelpText>External audits only</inlineHelpText>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Surveillance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recertification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension to Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification – stage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification – stage 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>additional_organization__c</fullName>
        <label>Additional Organization</label>
        <picklist>
            <controllingField>Audit_organization__c</controllingField>
            <picklistValues>
                <fullName>3G Core BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Mobile Networks Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia &amp; Middle East &amp; Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM &amp; OSS BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe and Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDD LTE BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Service Delivery (GSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOPS Business Performance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOPS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOPS Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Het-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Core BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed services (MS)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QIPP Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Audit_Type__c</columns>
        <columns>Lead_Auditor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Audit_Year__c</columns>
        <columns>Audit_Status__c</columns>
        <columns>Audit_Complete_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Audit_status_to_be_changed_to_complete</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Audit_Status__c , &apos;Completed&apos;) &amp;&amp; Audit_Complete_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Audit_Status__c</errorDisplayField>
        <errorMessage>Audit Status could not be changed to COMPLETED if the Audit Completed Date entered is in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Audit_status_to_be_changed_to_execute</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Audit_Status__c , &apos;Executed&apos;) &amp;&amp;  Audit_Executed_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Audit_Status__c</errorDisplayField>
        <errorMessage>Audit Status could not be changed to EXECUTED if the Audit Executed Date entered is in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>External_Audits_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Internal_External__c, &apos;External&apos;) &amp;&amp;  ($UserRole.Name != &apos;QIPP Audit Manager&apos;)</errorConditionFormula>
        <errorMessage>External Audits can only be created or modified by QMP.  Please contact QMP in this regard.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Audit_Completed_Date</fullName>
        <active>false</active>
        <description>Audit Complete Date can ONLY be entered when Audit Status = &quot;Completed“</description>
        <errorConditionFormula>AND (

NOT ( ISPICKVAL(  Audit_Status__c  , &apos;Completed&apos;) 
     ), 

 NOT(ISBLANK( Audit_Complete_Date__c )) 
)</errorConditionFormula>
        <errorDisplayField>Audit_Complete_Date__c</errorDisplayField>
        <errorMessage>Audit Complete Date can ONLY be entered when Audit Status = &quot;Completed“</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Audit_Executed_Date</fullName>
        <active>true</active>
        <description>Audit Executed Date can ONLY be entered when Audit Status = &quot;Executed&quot;, &quot;Reported&quot; and &quot;Completed&quot;</description>
        <errorConditionFormula>AND (

NOT ( 
 OR ( ISPICKVAL(  Audit_Status__c  , &apos;Executed&apos;), 
     ISPICKVAL(  Audit_Status__c  , &apos;Reported&apos;),
     ISPICKVAL(  Audit_Status__c  , &apos;Completed&apos;)
   )), 

 NOT(ISBLANK(Audit_Executed_Date__c)) 
)</errorConditionFormula>
        <errorDisplayField>Audit_Executed_Date__c</errorDisplayField>
        <errorMessage>Audit Executed Date can ONLY be entered when Audit Status = &quot;Executed&quot;, &quot;Reported&quot; or &quot;Completed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Audit_Status</fullName>
        <active>true</active>
        <description>Audit Status cannot be set to &quot;Executed&quot;, &quot;Reported&quot; or &quot;Completed&quot; - when Audit Executed Date is NOT present</description>
        <errorConditionFormula>AND ( 

( 
OR ( ISPICKVAL( Audit_Status__c , &apos;Executed&apos;), 
ISPICKVAL( Audit_Status__c , &apos;Reported&apos;), 
ISPICKVAL( Audit_Status__c , &apos;Completed&apos;) 
)), 

(ISBLANK(Audit_Executed_Date__c)) 
)</errorConditionFormula>
        <errorDisplayField>Audit_Status__c</errorDisplayField>
        <errorMessage>Audit Status cannot be set to &quot;Executed&quot;, &quot;Reported&quot; or &quot;Completed&quot; - when Audit Executed Date is NOT present</errorMessage>
    </validationRules>
</CustomObject>